--- a/react-ui/src/style/App.css
+++ b/react-ui/src/style/App.css
@@ -1,5 +1,5 @@
 /*=========== IMPORTS =============*/
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
 /*=========== BASE STYLES =============*/
 :root {
   --color-green: #2cda00;
@@ -12,7 +12,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
@@ -29,5 +29,20 @@ body {
 }
 
 /*=========== IMAGE STYLES =============*/
+
+/* Copy protection */
+img {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+
+  user-zoom: none;
+
+  pointer-events: none;
+
+  -webkit-touch-callout: none;
+}
+
 /*=========== COMPONENT STYLES =============*/
 /*# sourceMappingURL=App.css.map */
