--- a/react-ui/src/style/App.css
+++ b/react-ui/src/style/App.css
@@ -45,4 +45,22 @@ img {
 }
 
 /*=========== COMPONENT STYLES =============*/
+
+/*=========== ANIMATION STYLES =============*/
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.3);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
 /*# sourceMappingURL=App.css.map */
