feat: modal added and rework of dashboard

--- a/react-ui/src/style/App.css
+++ b/react-ui/src/style/App.css
@@ -63,4 +63,24 @@ img {
   }
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -60%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
 /*# sourceMappingURL=App.css.map */
