--- a/react-ui/src/style/App.css
+++ b/react-ui/src/style/App.css
@@ -12,11 +12,12 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 10px;
 }
 
 body {
