feat: modal details improved and clickable toggle implemented

--- a/react-ui/src/style/App.css
+++ b/react-ui/src/style/App.css
@@ -84,4 +84,16 @@ img {
   }
 }
 
+@keyframes pop {
+  0% {
+    transform: scale(0);
+  }
+  90% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 /*# sourceMappingURL=App.css.map */
