--- a/react-ui/src/style/App.css
+++ b/react-ui/src/style/App.css
@@ -1,5 +1,3 @@
-/*=========== IMPORTS =============*/
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
 /*=========== BASE STYLES =============*/
 :root {
   --color-bg: #021a21;
@@ -13,6 +11,14 @@
 
   --color-light: #f8f8f8;
   --color-light--dimmed: #f2f2f2;
+}
+
+/*import fonts from public folder which is mounted in snowpack config*/
+
+@font-face {
+  font-family: 'Josefin Sans';
+  src: url('/fonts/JosefinSans-Regular.ttf') format('truetype'), url('/fonts/JosefinSans-Light.ttf') format('truetype'),
+    url('/fonts/JosefinSans-SemiBold.ttf') format('truetype');
 }
 
 *,
