feat: major improvement in UI for users when decrypting secrets

--- a/react-ui/src/style/App.css
+++ b/react-ui/src/style/App.css
@@ -42,6 +42,7 @@ body {
 /*=========== FONT STYLES =============*/
 body {
   font-family: 'Josefin Sans', sans-serif;
+  line-height: 1.4em;
 }
 
 /*=========== IMAGE STYLES =============*/
