--- a/react-ui/src/components/ui/cards/IconCard/IconCard.module.scss
+++ b/react-ui/src/components/ui/cards/IconCard/IconCard.module.scss
@@ -33,8 +33,11 @@
 
 .content {
   flex: 1;
+  display: flex;
+  flex-direction: column;
   text-align: left;
   justify-content: flex-start;
+  align-items: baseline;
   line-height: 1.6rem;
 }
 
