--- a/react-ui/src/components/ui/modals/Animatedmodal.module.scss
+++ b/react-ui/src/components/ui/modals/Animatedmodal.module.scss
@@ -1,7 +1,7 @@
 .modal {
   position: fixed;
   left: 50%;
-  padding: 1rem;
+  padding: 1rem 2rem;
   width: clamp(25rem, 50vw, 50rem);
   min-height: 15rem;
   background: white;
