--- a/react-ui/src/components/ui/forms/inputs/Imagedropzone.module.scss
+++ b/react-ui/src/components/ui/forms/inputs/Imagedropzone.module.scss
@@ -4,21 +4,21 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
-
     width: 100%;
-    min-height: 10rem;
     border: 2px dashed #ccc;
     border-radius: 5px;
     background-color: #f5f5f5;
+    position: relative;
+  }
 
+  & input {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    padding: 5rem;
     &:hover {
       cursor: pointer;
     }
-  }
-
-  & input[type='file'] {
-    display: none;
   }
 }
 
@@ -28,4 +28,12 @@
     border: 2px dashed rgb(2, 84, 122);
     background-color: #c6e4ff;
   }
+}
+
+.labelText {
+  margin-bottom: 1rem;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
