--- a/react-ui/src/style/App.css
+++ b/react-ui/src/style/App.css
@@ -1,71 +1,68 @@
 /*=========== BASE STYLES =============*/
 :root {
-  --color-bg: #021a21;
-  --color-green: #2cda00;
-  --color-green--light: #dff0df;
-  --color-red--light: #f2dede;
-  --color-blue--light: #c5f0f3;
+    --color-bg: #021a21;
+    --color-green: #2cda00;
+    --color-green--light: #dff0df;
+    --color-red--light: #f2dede;
+    --color-blue--light: #c5f0f3;
+    --color-blue--light-200: #c5f0f320;
 
-  --color-grey--dark: #494949;
-  --color-grey--light: #999;
+    --color-grey--dark: #494949;
+    --color-grey--light: #999;
 
-  --color-light: #f8f8f8;
-  --color-light--dimmed: #f2f2f2;
+    --color-light: #f8f8f8;
+    --color-light--dimmed: #f2f2f2;
 }
 
 /*import fonts from public folder which is mounted in snowpack config*/
 
 @font-face {
-  font-family: 'Josefin Sans';
-  src: url('/fonts/JosefinSans-Regular.ttf') format('truetype'), url('/fonts/JosefinSans-Light.ttf') format('truetype'),
+    font-family: 'Josefin Sans';
+    src: url('/fonts/JosefinSans-Regular.ttf') format('truetype'), url('/fonts/JosefinSans-Light.ttf') format('truetype'),
     url('/fonts/JosefinSans-SemiBold.ttf') format('truetype');
 }
 
 *,
 *::after,
 *::before {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html {
-  font-size: 10px;
+    font-size: 10px;
 }
 
 body {
-  font-size: 1.6rem;
+    font-size: 1.6rem;
 }
 
 /*=========== FONT STYLES =============*/
 body {
-  font-family: 'Josefin Sans', sans-serif;
-  line-height: 1.4em;
+    font-family: 'Josefin Sans', sans-serif;
+    line-height: 1.4em;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  line-height: 1.5em;
+    line-height: 1.5em;
 }
 
 /*=========== IMAGE STYLES =============*/
 
 /* Copy protection */
 img {
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 
-  user-zoom: none;
+    pointer-events: none;
 
-  pointer-events: none;
-
-  -webkit-touch-callout: none;
+    -webkit-touch-callout: none;
 }
 
 /*=========== COMPONENT STYLES =============*/
@@ -73,80 +70,80 @@ img {
 /*=========== ANIMATION STYLES =============*/
 
 @keyframes pulse {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  50% {
-    transform: scale(1.3);
-    opacity: 0;
-  }
-  100% {
-    transform: scale(1);
-    opacity: 0;
-  }
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.3);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 0;
+    }
 }
 
 @keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 @keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 @keyframes fadeInUp {
-  0% {
-    opacity: 0;
-    transform: translate(-50%, -60%);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(-50%, -50%);
-  }
+    0% {
+        opacity: 0;
+        transform: translate(-50%, -60%);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
 }
 
 @keyframes fadeOutUp {
-  0% {
-    opacity: 1;
-    transform: translate(-50%, -50%);
-  }
-  100% {
-    opacity: 0;
-    transform: translate(-50%, -60%);
-  }
+    0% {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
+    100% {
+        opacity: 0;
+        transform: translate(-50%, -60%);
+    }
 }
 
 @keyframes pop {
-  0% {
-    transform: scale(0);
-  }
-  90% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
+    0% {
+        transform: scale(0);
+    }
+    90% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 /*global class styles */
 
 .fadeOut {
-  animation: fadeOut 0.5s ease-in-out;
+    animation: fadeOut 0.5s ease-in-out;
 }
 
 .fadeOutUp {
-  animation: fadeOutUp 0.5s ease-in-out;
+    animation: fadeOutUp 0.5s ease-in-out;
 }
 
 /*# sourceMappingURL=App.css.map */
