feat(ui): theming and color improvements

--- a/react-ui/src/components/ui/modals/PublicSecretModal.module.scss
+++ b/react-ui/src/components/ui/modals/PublicSecretModal.module.scss
@@ -1,12 +1,12 @@
 .modal {
     position: fixed;
     left: 50%;
-    padding: 1rem 2rem;
+    padding: 2.25rem 2.25rem 1.25rem 2.25rem;
     width: clamp(25rem, 50vw, 50rem);
     min-height: 15rem;
-    background: var(--color-light);
+    background: var(--color-light-1000);
     border-radius: 0.5rem;
-    box-shadow: 0.1rem 2rem 10rem var(--color-blue--light-200);
+    box-shadow: 0.1rem 2rem 10rem var(--color-lightblue-200);
     z-index: 100;
     transform: translate(-50%, -50%);
 }
