--- a/react-ui/src/components/ui/cards/IconCard/IconCard.module.scss
+++ b/react-ui/src/components/ui/cards/IconCard/IconCard.module.scss
@@ -1,65 +1,88 @@
 .container {
-  position: relative;
+    position: relative;
+}
+
+@keyframes borderRotate {
+    100% {
+        --angle: 440deg;
+    }
 }
 
 .card {
-  position: relative;
-  background: white;
-  border-radius: 0.3rem;
-  padding: 2rem 1rem;
-  display: flex;
-  z-index: 10;
+    --duration: 3500ms;
+    --angle: 90deg;
+    --gradX: 100%;
+    --gradY: 50%;
+
+    display: flex;
+    position: relative;
+    padding: 2rem 1rem;
+    background: white;
+    z-index: 10;
+
+    border: 0.2rem solid;
+    border-radius: 0.2rem;
+    border-image: conic-gradient(from var(--angle), var(--color-lightblue-800), var(--color-lightblue-800) 0.1turn, var(--color-lightblue-800) 0.15turn, var(--color-light-1000) 0.25turn) 30;
+    animation: borderRotate var(--duration) linear infinite forwards;
+}
+
+.purple {
+    border-image: conic-gradient(from var(--angle), var(--color-purple-1200), var(--color-purple-1200) 0.1turn, var(--color-purple-1200) 0.15turn, var(--color-light-1000) 0.25turn) 30;
+}
+
+.green {
+    border-image: conic-gradient(from var(--angle), var(--color-green-1000), var(--color-green-1000) 0.1turn, var(--color-green-1000) 0.15turn, var(--color-light-1000) 0.25turn) 30;
 }
 
 .shadow {
-  position: absolute;
-  background: transparent;
-  content: '';
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  transition: box-shadow 0.2s ease-in;
+    position: absolute;
+    background: transparent;
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    transition: box-shadow 0.2s ease-in;
 }
 
 .card:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .icon {
-  width: 5rem;
+    width: 5rem;
 }
 
 .content {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  justify-content: flex-start;
-  align-items: baseline;
-  line-height: 1.6rem;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    justify-content: flex-start;
+    align-items: baseline;
+    line-height: 1.6rem;
 }
 
 .content h2 {
-  margin-bottom: 1rem;
-  font-weight: 600;
-  font-size: 1.6rem;
+    margin-bottom: 1rem;
+    font-weight: 600;
+    font-size: 1.6rem;
 }
 
 .content p {
-  font-weight: 300;
-  font-size: 1.6rem;
+    font-weight: 300;
+    font-size: 1.6rem;
 }
 
 .card:hover + .shadow {
-  box-shadow: 0.3rem 0.3rem 7rem rgba(89, 193, 235, 0.4);
+    box-shadow: 0.3rem 0.3rem 7rem rgba(89, 193, 235, 0.4);
 }
 
 .card:hover + .purple {
-  box-shadow: 0.3rem 0.3rem 7rem rgba(87, 16, 145, 0.4);
+    box-shadow: 0.3rem 0.3rem 7rem rgba(87, 16, 145, 0.4);
 }
 
 .card:hover + .green {
-  box-shadow: 0.3rem 0.3rem 7rem rgba(15, 196, 157, 0.4);
+    box-shadow: 0.3rem 0.3rem 7rem rgba(15, 196, 157, 0.4);
 }
